<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2018.calculator.Calculator">

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_8"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="175dp"
        app:layout_constraintRight_toLeftOf="@id/button9"
        app:layout_constraintBottom_toTopOf="@id/button5"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp"/>

    <Button
        android:id="@+id/buttonMult"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_Mult"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="335dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonDiv"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_2"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="335dp"
        app:layout_constraintRight_toLeftOf="@id/button3"
        app:layout_constraintBottom_toTopOf="@id/button0"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="335dp"
        app:layout_constraintRight_toLeftOf="@id/button2"
        app:layout_constraintBottom_toTopOf="@id/buttonClear"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_5"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="255dp"
        app:layout_constraintRight_toLeftOf="@id/button6"
        app:layout_constraintBottom_toTopOf="@id/button2"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp" />

    <Button
        android:id="@+id/buttonMin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_Min"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="255dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonMult"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="15dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_4"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="255dp"
        app:layout_constraintRight_toLeftOf="@id/button5"
        app:layout_constraintBottom_toTopOf="@id/button1"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp"  />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_Div"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="415dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="15dp" />

    <Button
        android:id="@+id/buttonEqu"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_Equ"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="415dp"
        app:layout_constraintRight_toLeftOf="@id/buttonDiv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_9"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="175dp"
        app:layout_constraintRight_toLeftOf="@id/buttonPlus"
        app:layout_constraintBottom_toTopOf="@id/button6"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="30dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_6"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="255dp"
        app:layout_constraintRight_toLeftOf="@id/buttonMin"
        app:layout_constraintBottom_toTopOf="@id/button3"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_3"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="335dp"
        app:layout_constraintRight_toLeftOf="@id/buttonMult"
        app:layout_constraintBottom_toTopOf="@id/buttonEqu"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_0"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="415dp"
        app:layout_constraintRight_toLeftOf="@id/buttonEqu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_Plus"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="175dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonMin"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="15dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_7"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="175dp"
        app:layout_constraintRight_toLeftOf="@id/button8"
        app:layout_constraintBottom_toTopOf="@id/button4"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="1dp"  />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_Clear"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="415dp"
        app:layout_constraintRight_toLeftOf="@id/button0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="344dp"
        android:layout_height="68dp"
        android:text=""
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="75dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp" />

</android.support.constraint.ConstraintLayout>
